--- a/vignettes/libr-example1.Rmd
+++ b/vignettes/libr-example1.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 options(rmarkdown.html_vignette.check_title = FALSE)
 
 ```
+## Program
 
 The previous examples in the **libr** documentation were intentionally
 simplified to focus on the workings of a particular function.  It is helpful,
@@ -158,6 +159,8 @@ writeLines(readLines(lf, encoding = "UTF-8"))
 
 ```
 
+## Log
+
 Here is the log from the above program:
 ```
 =========================================================================
@@ -296,6 +299,9 @@ Log End Time: 2021-11-20 23:06:57
 Log Elapsed Time: 0 00:00:07
 =========================================================================
 ```
+
+## Output
+
 And here is the output:
 
 <img src="../man/images/example1a.png"/>
