--- a/vignettes/libr-datastep.Rmd
+++ b/vignettes/libr-datastep.Rmd
@@ -177,6 +177,61 @@ df
 # Merc 280          19.2   6    4   End
 
 ```
+### By Group Processing of Multiple Variables
+If desired, you can pass multiple variables on the `by` parameter. When there
+are multiple by groups, the `first.` and `last.` automatic variables described
+above will represent an "or" combination of values for all by-variables. In 
+addition, automatic variables will be created for each variable in the by
+group, similar to SAS®. Observe:
+
+#### Example 5: Multiple By Groups
+```{r eval=FALSE, echo=TRUE}
+library(libr)
+
+# Create sample data
+df <- data.frame(HairEyeColor)[seq(2, 32, 2), ]
+
+# Sort by groups
+df <- sort(df, by = c("Sex", "Hair"))
+
+# Identify start and end of by-groups
+df2 <- datastep(df,
+   drop = c("Eye", "Freq"),
+   by = c("Sex", "Hair"), {
+
+    fSex <- first.Sex
+    lSex <- last.Sex
+    fHair <- first.Hair
+    lHair <- last.Hair
+
+  })
+  
+df2
+#     Hair    Sex  fSex  lSex fHair lHair
+# 1  Brown   Male  TRUE FALSE  TRUE FALSE
+# 2  Brown   Male FALSE FALSE FALSE FALSE
+# 3  Brown   Male FALSE FALSE FALSE FALSE
+# 4  Brown   Male FALSE FALSE FALSE  TRUE
+# 5  Blond   Male FALSE FALSE  TRUE FALSE
+# 6  Blond   Male FALSE FALSE FALSE FALSE
+# 7  Blond   Male FALSE FALSE FALSE FALSE
+# 8  Blond   Male FALSE  TRUE FALSE  TRUE
+# 9  Brown Female  TRUE FALSE  TRUE FALSE
+# 10 Brown Female FALSE FALSE FALSE FALSE
+# 11 Brown Female FALSE FALSE FALSE FALSE
+# 12 Brown Female FALSE FALSE FALSE  TRUE
+# 13 Blond Female FALSE FALSE  TRUE FALSE
+# 14 Blond Female FALSE FALSE FALSE FALSE
+# 15 Blond Female FALSE FALSE FALSE FALSE
+# 16 Blond Female FALSE  TRUE FALSE  TRUE
+
+```
+The above `first.Sex`, `last.Sex`, `first.Hair`, and `last.Hair` variables
+may also be used in conditions, functions, or any other expression
+inside your datastep. Note that like `first.` and `last.` they are 
+dropped automatically at the end of the datastep. If you want to retain
+their values, assign them to a new variable as shown above.
+
 ### Using Summary Functions
 There may be times when you want to combine row-by-row conditional 
 processing with column-by-column vector operations.  For example, 
@@ -187,7 +242,7 @@ function. The function will execute the `calculate` block first, add any
 assigned variables to the data frame, and then execute the data step.  Below 
 is an example of such a scenario:
 
-#### Example 5: Calculate Block
+#### Example 6: Calculate Block
 ```{r eval=FALSE, echo=TRUE}
 library(libr)
 
@@ -226,7 +281,7 @@ function.  Therefore, within a **dplyr** pipeline, it is not necessary to
 use any `datastep` parameters.  The following example recreates the above 
 data frame from Example 5, but with a **dplyr** pipeline.
 
-#### Example 6: Data Pipeline
+#### Example 7: Data Pipeline
 ```{r eval=FALSE, echo=TRUE}
 library(libr)
 library(dplyr)
@@ -271,7 +326,7 @@ the `datastep()` function provides an _attrib_ parameter that allows you
 to supply such attributes as part of a data step.  Attributes are 
 assigned with a named list and the `dsattr()` object. 
 
-#### Example 7: Attributes
+#### Example 8: Attributes
 ```{r eval=FALSE, echo=TRUE}
 library(libr)
 
@@ -336,7 +391,7 @@ to extract values.  You can use the indexer to extract a single value or
 a subset of values.  An empty indexer will return all the values in the
 array.
 
-#### Example 8: Using a Data Step Array
+#### Example 9: Using a Data Step Array
 ```{r eval=FALSE, echo=TRUE}
 library(libr)
 
@@ -638,6 +693,53 @@ res
 # 4 A04     Home and Yard    L    R03     FALSE       North
 # 5 A03         AAA Mills    S    R04     FALSE       South
 ```
+
+### Datastep Performance
+One weakness of the **libr** `datastep()` function is performance. The
+function is far slower than the equivalent SAS® datastep.  The performance
+profile may limit the number of records you are able to reasonably process
+with the `datastep()`.  
+
+One thing you can do to increase performance is to reduce the number of rows
+and columns on the input data.  You can perform this pre-filtering with Base R
+or **Tidyverse** functions. This strategy is particularly recommended if 
+you were planning to subset the data anyway using the "where" or "keep" options.
+
+The Base R `subset()` function is convenient to use because it is always available.
+Here is an example showing how to reduce the size of the **iris** sample 
+dataframe using Base R `subset()` before sending it to a datastep.
+
+#### Example 10: Increasing Performance
+```
+# Subset the input dataset first for only needed rows and columns
+dat <- subset(iris, Species == 'versicolor', c('Petal.Length', 'Petal.Width')) |> 
+       datastep({
+       
+         if (Petal.Length < 3.5)
+            Petal.Size <- "Short"
+         else if (Petal.Length > 4.5)
+            Petal.Size <- "Long"
+         else
+            Petal.Size <- "Medium"
+       
+       })
+
+# View Some Results
+dat[1:10, ]
+#    Petal.Length Petal.Width Petal.Size
+# 1           4.7         1.4       Long
+# 2           4.5         1.5     Medium
+# 3           4.9         1.5       Long
+# 4           4.0         1.3     Medium
+# 5           4.6         1.5       Long
+# 6           4.5         1.3     Medium
+# 7           4.7         1.6       Long
+# 8           3.3         1.0      Short
+# 9           4.6         1.3       Long
+# 10          3.9         1.4     Medium
+
+```
+
 
 Next: [Disclaimer](libr-disclaimer.html)
 
